style: corrected color for dark mode

--- a/css/components.css
+++ b/css/components.css
@@ -42,6 +42,7 @@ section {
 
 table {
   border-collapse: collapse;
+  color: var(--color-primary);
 }
 
 thead {
